Reduce spacing and compact layout

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ body.entered{overflow:auto;background:#fafaf8}
 .market-group{background:rgba(0,0,0,.02);padding:15px;margin-bottom:15px;border-left:2px solid #e0e0e0}
 .market-group-title{font-size:.6rem;color:#999;letter-spacing:.1em;text-transform:uppercase;margin-bottom:10px}
 
-.hero{min-height:100vh;display:flex;align-items:center;padding:0 50px;max-width:800px;margin:0 auto}
+.hero{min-height:auto;padding:80px 50px 40px;display:flex;align-items:center;max-width:800px;margin:0 auto}
 .hero-content{max-width:650px;opacity:0}
 .hero h1{font-family:'Cormorant Garamond',serif;font-size:clamp(2.2rem,4vw,3.2rem);font-weight:300;line-height:1.15;margin-bottom:25px}
 .hero p{font-size:1rem;color:#666;line-height:1.8;margin-bottom:35px}
@@ -143,19 +143,19 @@ section{padding:80px 50px;max-width:900px;margin:0 auto}
 .post-title{font-family:'Cormorant Garamond',serif;font-size:1.5rem;color:#1a1a1a;margin-bottom:10px}
 .post-excerpt{font-size:.9rem;color:#666;line-height:1.7}
 
-.two-col-section{display:grid;grid-template-columns:1fr 1fr;gap:40px;padding:80px 50px;max-width:900px;margin:0 auto}
-.two-col-section .col{min-width:0}
-.two-col-section .section-title{margin-bottom:25px}
-.two-col-section .post-item{padding:20px 0}
-
-.skills-basket-section{padding:40px 50px;max-width:700px;margin:0 auto}
+.skills-basket-section{padding:20px 50px 30px;max-width:600px;margin:0 auto}
 .research-highlights{text-align:center;margin-bottom:10px}
-.stats-row{display:flex;justify-content:center;gap:30px}
-.stat-card{background:#fff;border:1px solid #e8e8e8;padding:25px 35px;min-width:100px;text-align:center}
-.stat-number{font-family:'Cormorant Garamond',serif;font-size:2.5rem;font-weight:500;color:#1a1a1a;line-height:1}
-.stat-label{font-size:.7rem;color:#888;letter-spacing:.1em;text-transform:uppercase;margin-top:8px}
-.basket-container{width:100%;max-width:500px;height:200px;margin:0 auto;position:relative;border:2px solid #e0e0e0;border-top:2px solid #e0e0e0;border-radius:0 0 15px 15px;overflow:hidden;background:#fefefe}
+.stats-row{display:flex;justify-content:center;gap:20px}
+.stat-card{background:#fff;border:1px solid #e8e8e8;padding:15px 25px;min-width:80px;text-align:center}
+.stat-number{font-family:'Cormorant Garamond',serif;font-size:1.8rem;font-weight:500;color:#1a1a1a;line-height:1}
+.stat-label{font-size:.6rem;color:#888;letter-spacing:.1em;text-transform:uppercase;margin-top:5px}
+.basket-container{width:100%;max-width:380px;height:100px;margin:0 auto;position:relative;border:2px solid #e0e0e0;border-radius:0 0 10px 10px;overflow:hidden;background:#fefefe}
 #skillsCanvas{width:100%;height:100%;display:block}
+
+.two-col-section{display:grid;grid-template-columns:1fr 1fr;gap:30px;padding:30px 50px 50px;max-width:900px;margin:0 auto}
+.two-col-section .col{min-width:0}
+.two-col-section .section-title{margin-bottom:20px}
+.two-col-section .post-item{padding:15px 0}
 
 @media(max-width:1024px){
     .sidebar{width:100%;height:auto;position:relative;border-right:none;border-bottom:1px solid rgba(0,0,0,.08);padding:25px 20px}
@@ -539,11 +539,11 @@ function initSkillsBasket() {
     });
     
     const balls = [];
-    const radius = 22;
+    const radius = 16;
     
     skills.forEach((skill, i) => {
-        const x = 40 + (i % 4) * 110 + Math.random() * 20;
-        const y = 30 + Math.floor(i / 4) * 50 + Math.random() * 20;
+        const x = 30 + (i % 4) * 85;
+        const y = 25 + Math.floor(i / 4) * 35;
         const ball = Bodies.circle(x, y, radius, {
             restitution: 0.3,
             friction: 0.3,
