Rename to Profile Summary

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ section{padding:80px 50px;max-width:900px;margin:0 auto}
 <!-- Skills Basket with Physics -->
 <section class="skills-basket-section">
     <div class="research-highlights">
-        <h2 class="section-title" style="text-align:center;border:none;padding:0;margin-bottom:30px;">Research Highlights</h2>
+        <h2 class="section-title" style="text-align:center;border:none;padding:0;margin-bottom:30px;">Profile Summary</h2>
         <div class="stats-row">
             <div class="stat-card">
                 <div class="stat-number">1</div>
