Add BACBB research paper - Betting Against Cryptocurrency Bad Beta

--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@ section{padding:80px 50px;max-width:900px;margin:0 auto}
             <div class="nav-section-title">Research</div>
             <ul class="nav-list">
                 <li><a href="/research/move-vasicek-kr/">MOVE-Vasicek Model</a></li>
+                <li><a href="/research/bacbb/">BACBB Strategy</a></li>
             </ul>
         </div>
         
