--- a/research/index.html
+++ b/research/index.html
@@ -119,6 +119,7 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
             <div class="nav-section-title">Research</div>
             <ul class="nav-list">
                 <li><a href="/research/move-vasicek-kr/">MOVE-Vasicek Model</a></li>
+                <li><a href="/research/bacbb/">BACBB Strategy</a></li>
             </ul>
         </div>
         
@@ -176,6 +177,18 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
                     <span class="tag">Vasicek</span>
                     <span class="tag">MOVE Index</span>
                     <span class="tag">State-Dependent</span>
+                </div>
+            </a>
+            
+            <a href="/research/bacbb/" class="research-item">
+                <div class="research-date">February 04, 2026</div>
+                <h2 class="research-title">Betting Against Cryptocurrency Bad Beta</h2>
+                <p class="research-desc">Campbell-Vuolteenaho의 Bad Beta 개념과 Frazzini-Pedersen의 BAB 전략을 결합한 암호화폐 팩터 투자 전략. 연 수익률 14.14%, 샤프비율 1.04 달성. 2022년 하락장에서 양의 수익률 기록.</p>
+                <div class="research-tags">
+                    <span class="tag">Cryptocurrency</span>
+                    <span class="tag">Factor Investing</span>
+                    <span class="tag">Bad Beta</span>
+                    <span class="tag">Long-Short</span>
                 </div>
             </a>
         </div>
