Add Giscus guestbook to sidebar

--- a/index.html
+++ b/index.html
@@ -272,6 +272,30 @@ section{padding:80px 50px;max-width:900px;margin:0 auto}
         
         <div class="widget-update" id="update-time">Loading...</div>
     </div>
+    
+    <!-- Guestbook -->
+    <div class="widget-section" style="margin-top:20px;">
+        <div class="widget-title">Guestbook 📝</div>
+        <div class="giscus-container" style="max-height:400px;overflow-y:auto;">
+            <script src="https://giscus.app/client.js"
+                data-repo="gkfla2020-bit/gkfla2020-bit.github.io"
+                data-repo-id="R_kgDONqJqYQ"
+                data-category="General"
+                data-category-id="DIC_kwDONqJqYc4CmVvM"
+                data-mapping="specific"
+                data-term="guestbook"
+                data-strict="0"
+                data-reactions-enabled="1"
+                data-emit-metadata="0"
+                data-input-position="top"
+                data-theme="light"
+                data-lang="ko"
+                data-loading="lazy"
+                crossorigin="anonymous"
+                async>
+            </script>
+        </div>
+    </div>
 </aside>
 
 <div class="main-wrapper">
