--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: null
     <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-83LKVW7412');</script>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500&family=Space+Mono:wght@400&family=Inter:wght@300;400&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="https://unpkg.com/matter-js@0.19.0/build/matter.min.js"></script>
+    <script src="/assets/matter.min.js"></script>
 </head>
 <body>
 <style>
