--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@ layout: null
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ha Rim Jung | Quantitative Researcher</title>
+
+    <!-- Open Graph / 카톡·메신저 미리보기 -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Ha Rim Jung | Quantitative Researcher">
+    <meta property="og:description" content="M.S./Ph.D. in Computer Science @ Sogang University — Interest rate modeling, portfolio optimization, and quantitative trading strategies.">
+    <meta property="og:url" content="https://gkfla2020-bit.github.io">
+    <meta property="og:image" content="https://gkfla2020-bit.github.io/assets/og-card.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:site_name" content="Ha Rim Jung">
+    <meta property="og:locale" content="ko_KR">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Ha Rim Jung | Quantitative Researcher">
+    <meta name="twitter:description" content="Interest rate modeling, portfolio optimization, and quantitative trading strategies.">
+    <meta name="twitter:image" content="https://gkfla2020-bit.github.io/assets/og-card.png">
+
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-83LKVW7412"></script>
     <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-83LKVW7412');</script>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500&family=Space+Mono:wght@400&family=Inter:wght@300;400&display=swap" rel="stylesheet">
