--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ layout: null
     <script src="/assets/matter.min.js"></script>
 </head>
 <body>
+<img src="/assets/og-card.png" alt="" style="position:absolute;width:1px;height:1px;opacity:0;pointer-events:none;" aria-hidden="true">
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
 body{font-family:'Inter',sans-serif;background:#08080c;color:#fff;overflow:hidden}
