Improve mobile post item styling
- Better padding and spacing
- Softer shadows and borders
- Improved typography hierarchy
- More breathing room in two-col section

--- a/index.html
+++ b/index.html
@@ -268,14 +268,19 @@ section{padding:80px 50px;max-width:900px;margin:0 auto}
     /* 모바일 포스트 아이템 */
     .post-item{
         background:#fff;
-        padding:20px;
-        border-radius:10px;
+        padding:22px 20px;
+        border-radius:12px;
         border:1px solid #e8e8e8;
-        margin-bottom:15px;
-        box-shadow:0 2px 8px rgba(0,0,0,.04);
+        margin-bottom:12px;
+        box-shadow:0 2px 8px rgba(0,0,0,.03);
     }
     .post-item:hover{padding-left:20px;transform:translateY(-2px);box-shadow:0 4px 12px rgba(0,0,0,.08)}
-    .post-title{font-size:1.2rem}
+    .post-title{font-size:1.15rem;margin-bottom:12px}
+    .post-date{color:#aaa;margin-bottom:10px}
+    .post-excerpt{font-size:.85rem;color:#777;line-height:1.6}
+    
+    .two-col-section{padding:30px 20px 50px}
+    .two-col-section .section-title{font-size:1.4rem;margin-bottom:25px;padding-bottom:12px}
     
     /* 스킬 모바일 */
     .skills-container{height:auto;gap:10px;padding:15px}
