Fix: Copy images to blog/assets/bacbb and update paths

--- a/research/bacbb/index.html
+++ b/research/bacbb/index.html
@@ -290,7 +290,7 @@ permalink: /research/bacbb/
         <p class="body-text">현금흐름 뉴스(Cash-Flow News)는 자산의 펀더멘털에 대한 영구적 충격을 반영한다. 따라서 β<sub>CF</sub>가 높은 자산은 펀더멘털 악화 시 회복이 어렵고 장기적으로 더 큰 위험에 노출된다. 반면 할인율 뉴스(Discount Rate News)는 일시적인 할인율 변동을 반영하며 장기적으로 평균회귀하는 특성을 가지므로, β<sub>DR</sub>가 높은 자산은 단기적 변동성은 크지만 장기적 위험은 상대적으로 낮다.</p>
 
         <div class="figure">
-            <img src="/docs/Figure_Campbell_Shiller_Decomposition.png" alt="Campbell-Shiller Decomposition">
+            <img src="/assets/bacbb/Figure_Campbell_Shiller_Decomposition.png" alt="Campbell-Shiller Decomposition">
             <div class="figure-caption">Figure 1. Campbell-Shiller 분해 개념도 — 시장 수익률의 예측되지 않은 부분을 현금흐름 뉴스와 할인율 뉴스로 분해</div>
         </div>
 
@@ -365,7 +365,7 @@ permalink: /research/bacbb/
         </div>
 
         <div class="figure">
-            <img src="/docs/Figure_BACBB_Logic_Flow.png" alt="BACBB Strategy Logic Flow">
+            <img src="/assets/bacbb/Figure_BACBB_Logic_Flow.png" alt="BACBB Strategy Logic Flow">
             <div class="figure-caption">Figure 2. BACBB 전략 로직 플로우 — 데이터 수집부터 포트폴리오 구성까지의 전체 프로세스</div>
         </div>
 
@@ -373,7 +373,7 @@ permalink: /research/bacbb/
         <p class="body-text">거래비용은 Binance 거래소의 Taker 수수료 0.04%(편도)를 적용하고, 리밸런싱 시에는 회전율에 비례한 거래비용을 추가로 차감한다.</p>
 
         <div class="figure">
-            <img src="/docs/Figure_Funding_Rate_Structure.png" alt="Funding Rate Structure">
+            <img src="/assets/bacbb/Figure_Funding_Rate_Structure.png" alt="Funding Rate Structure">
             <div class="figure-caption">Figure 3. 펀딩비(Funding Rate) 정산 구조 — 8시간마다 롱/숏 포지션 간 자금 이전</div>
         </div>
 
@@ -404,7 +404,7 @@ permalink: /research/bacbb/
         </div>
 
         <div class="figure">
-            <img src="/docs/sample_1_Cumulative_Returns.png" alt="Cumulative Returns">
+            <img src="/assets/bacbb/sample_1_Cumulative_Returns.png" alt="Cumulative Returns">
             <div class="figure-caption">Figure 4. 누적 수익률 비교 (BACBB vs BACB) — BACBB가 일관되게 BACB를 상회하며, 특히 2022년 하락장에서 방어력 차이가 두드러짐</div>
         </div>
 
@@ -423,7 +423,7 @@ permalink: /research/bacbb/
         </div>
 
         <div class="figure">
-            <img src="/docs/sample_3_Sharpe_Comparison.png" alt="Sharpe Ratio Comparison">
+            <img src="/assets/bacbb/sample_3_Sharpe_Comparison.png" alt="Sharpe Ratio Comparison">
             <div class="figure-caption">Figure 5. 샤프비율 및 위험조정 성과 지표 비교 — 롤링 샤프비율과 주요 지표 모두에서 BACBB 우위</div>
         </div>
 
@@ -451,12 +451,12 @@ permalink: /research/bacbb/
         </div>
 
         <div class="figure">
-            <img src="/docs/sample_2_Yearly_Returns.png" alt="Yearly Returns">
+            <img src="/assets/bacbb/sample_2_Yearly_Returns.png" alt="Yearly Returns">
             <div class="figure-caption">Figure 6. 연도별 수익률 비교 — 5개 연도 중 4개 연도에서 BACBB가 BACB를 상회</div>
         </div>
 
         <div class="figure">
-            <img src="/docs/sample_6_Drawdown.png" alt="Drawdown Comparison">
+            <img src="/assets/bacbb/sample_6_Drawdown.png" alt="Drawdown Comparison">
             <div class="figure-caption">Figure 7. 드로우다운(Drawdown) 비교 — BACBB의 MDD가 BACB의 약 1/3 수준</div>
         </div>
 
@@ -479,12 +479,12 @@ permalink: /research/bacbb/
         <p class="body-text">Q1-Q5 스프레드는 연 24.79%, 샤프비율 1.12로 통계적으로 매우 유의하다(t=2.98, p=0.003). 이는 현금흐름 베타가 암호화폐 시장에서 유의미한 자산 선별 기준으로 작동함을 강력히 지지하는 증거이다.</p>
 
         <div class="figure">
-            <img src="/docs/Figure_Beta_Distribution.png" alt="Beta Distribution">
+            <img src="/assets/bacbb/Figure_Beta_Distribution.png" alt="Beta Distribution">
             <div class="figure-caption">Figure 8. Cash-Flow Beta 분포 — 대부분의 자산이 0.3~0.5 범위에 위치</div>
         </div>
 
         <div class="figure">
-            <img src="/docs/Figure_Group_Performance.png" alt="Group Performance">
+            <img src="/assets/bacbb/Figure_Group_Performance.png" alt="Group Performance">
             <div class="figure-caption">Figure 9. CF Beta 그룹별 성과 비교 — 저 CF Beta 그룹이 모든 지표에서 우수</div>
         </div>
 
@@ -507,7 +507,7 @@ permalink: /research/bacbb/
         </div>
 
         <div class="figure">
-            <img src="/docs/sample_5_Regression.png" alt="Regression Analysis">
+            <img src="/assets/bacbb/sample_5_Regression.png" alt="Regression Analysis">
             <div class="figure-caption">Figure 10. BACBB on BACB 회귀분석 — R²=0.342로 BACBB가 BACB와 다른 수익 원천을 가짐</div>
         </div>
 
@@ -530,17 +530,17 @@ permalink: /research/bacbb/
         <p class="body-text">특히 주목할 점은 Out-of-Sample 기간에서 샤프비율이 오히려 향상(0.99 → 1.09)되었으며, 통계적 유의성도 개선(p=0.060 → p=0.037)되었다는 것이다. 이는 BACBB 전략이 특정 기간에 과적합되지 않았음을 강력히 시사한다.</p>
 
         <div class="figure">
-            <img src="/docs/sample_13_OOS_Validation.png" alt="Out-of-Sample Validation">
+            <img src="/assets/bacbb/sample_13_OOS_Validation.png" alt="Out-of-Sample Validation">
             <div class="figure-caption">Figure 11. Out-of-Sample 검증 결과 — IS/OOS 모두에서 일관된 성과</div>
         </div>
 
         <div class="figure">
-            <img src="/docs/sample_14_OOS_Rolling.png" alt="OOS Rolling Performance">
+            <img src="/assets/bacbb/sample_14_OOS_Rolling.png" alt="OOS Rolling Performance">
             <div class="figure-caption">Figure 12. 롤링 성과 분석 — IS/OOS 분할 시점 전후로 안정적인 성과 유지</div>
         </div>
 
         <div class="figure">
-            <img src="/docs/sample_15_OOS_Summary.png" alt="OOS Summary">
+            <img src="/assets/bacbb/sample_15_OOS_Summary.png" alt="OOS Summary">
             <div class="figure-caption">Figure 13. Out-of-Sample 검증 종합 요약</div>
         </div>
 
@@ -548,42 +548,42 @@ permalink: /research/bacbb/
         <p class="body-text">개별 자산 수준에서 현금흐름 베타와 성과 간의 관계를 분석하였다. 현금흐름 베타가 낮은 자산군(Long 포지션)은 평균적으로 높은 수익률과 낮은 MDD를 기록한 반면, 현금흐름 베타가 높은 자산군(Short 포지션)은 낮은 수익률과 높은 MDD를 기록하였다.</p>
 
         <div class="figure">
-            <img src="/docs/Figure_Asset_CF_Beta.png" alt="Asset CF Beta Analysis">
+            <img src="/assets/bacbb/Figure_Asset_CF_Beta.png" alt="Asset CF Beta Analysis">
             <div class="figure-caption">Figure 14. 자산별 Cash-Flow Beta와 수익률 관계 — CF Beta가 낮을수록 높은 수익률</div>
         </div>
 
         <div class="figure">
-            <img src="/docs/sample_9_Asset_Returns.png" alt="Asset Returns by CF Beta">
+            <img src="/assets/bacbb/sample_9_Asset_Returns.png" alt="Asset Returns by CF Beta">
             <div class="figure-caption">Figure 15. 개별 자산 연간 수익률 — 자산 간 수익률 편차가 매우 큼</div>
         </div>
 
         <div class="figure">
-            <img src="/docs/sample_8_Distribution.png" alt="Return Distribution">
+            <img src="/assets/bacbb/sample_8_Distribution.png" alt="Return Distribution">
             <div class="figure-caption">Figure 16. 일간 수익률 분포 비교 — BACBB가 더 좁고 뾰족한 분포(낮은 변동성)</div>
         </div>
 
         <div class="figure">
-            <img src="/docs/sample_10_3D_Beta_Return.png" alt="3D Beta Return">
+            <img src="/assets/bacbb/sample_10_3D_Beta_Return.png" alt="3D Beta Return">
             <div class="figure-caption">Figure 17. 3D Beta-Return 분포 — CF Beta가 낮은 영역에 고수익 자산 집중</div>
         </div>
 
         <div class="figure">
-            <img src="/docs/sample_11_3D_Regression.png" alt="3D Regression">
+            <img src="/assets/bacbb/sample_11_3D_Regression.png" alt="3D Regression">
             <div class="figure-caption">Figure 18. 3D 회귀 평면 — CF Beta 방향으로 음의 기울기</div>
         </div>
 
         <div class="figure">
-            <img src="/docs/sample_12_Beta_Heatmap.png" alt="Beta Heatmap">
+            <img src="/assets/bacbb/sample_12_Beta_Heatmap.png" alt="Beta Heatmap">
             <div class="figure-caption">Figure 19. Beta 분포 히트맵 — Total Beta와 CF Beta의 관계</div>
         </div>
 
         <div class="figure">
-            <img src="/docs/sample_4_BAB_BACBB_Difference.png" alt="BAB vs BACBB Difference">
+            <img src="/assets/bacbb/sample_4_BAB_BACBB_Difference.png" alt="BAB vs BACBB Difference">
             <div class="figure-caption">Figure 20. BACBB와 BACB 성과 차이 분석</div>
         </div>
 
         <div class="figure">
-            <img src="/docs/sample_7_Summary.png" alt="Summary">
+            <img src="/assets/bacbb/sample_7_Summary.png" alt="Summary">
             <div class="figure-caption">Figure 21. BACBB vs BACB 성과 요약</div>
         </div>
     </section>
