--- a/research/index.html
+++ b/research/index.html
@@ -85,7 +85,16 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
     .sidebar-footer{display:none}
     .main-wrapper{margin-left:0;margin-right:0}
     .right-sidebar{display:none}
-    .container{padding:40px 25px 60px}
+    .container{padding:30px 20px 50px}
+    
+    /* 모바일 리서치 카드 */
+    .research-item{padding:22px 20px;border-radius:12px}
+    .research-item:hover{transform:none}
+    .research-title{font-size:1.25rem;margin-bottom:10px}
+    .research-desc{font-size:.85rem;line-height:1.65}
+    .research-tags{margin-top:14px;gap:6px}
+    .tag{font-size:.55rem;padding:4px 10px}
+    .page-subtitle{margin-bottom:40px}
 }
     </style>
 </head>
