Add OG tags to all pages, prevent profile photo from being crawled

--- a/reports/weekly-20260206/index.html
+++ b/reports/weekly-20260206/index.html
@@ -4,6 +4,21 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Weekly Investment Report | Ha Rim Jung</title>
+
+<!-- Open Graph / 카톡·메신저 미리보기 -->
+<meta property="og:type" content="article">
+<meta property="og:title" content="Weekly Investment Report">
+<meta property="og:description" content="주간 매크로 시장 분석 및 투자 인사이트">
+<meta property="og:url" content="https://gkfla2020-bit.github.io/reports/weekly-20260206/">
+<meta property="og:image" content="https://gkfla2020-bit.github.io/assets/og-card.png">
+<meta property="og:image:secure_url" content="https://gkfla2020-bit.github.io/assets/og-card.png">
+<meta property="og:image:type" content="image/png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:site_name" content="Ha Rim Jung">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:image" content="https://gkfla2020-bit.github.io/assets/og-card.png">
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-83LKVW7412"></script>
 <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-83LKVW7412');</script>
 <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500&family=Space+Mono:wght@400&family=Inter:wght@300;400&family=Noto+Serif+KR:wght@400;500;600;700&family=Playfair+Display:wght@400;600;700&family=Roboto+Mono:wght@400;500&display=swap" rel="stylesheet">
@@ -164,7 +179,7 @@ body { font-family: 'Noto Serif KR', Georgia, serif; background: #fafaf8; color:
 <!-- Left Sidebar -->
 <aside class="sidebar">
     <div class="sidebar-profile">
-        <img src="/assets/profile.png" alt="Ha Rim Jung" class="profile-photo">
+        <img src="/assets/profile.png" alt="Ha Rim Jung" class="profile-photo" data-nosnippet>
         <div class="profile-name">Ha Rim Jung</div>
         <div class="profile-title">Quantitative Researcher</div>
         <p class="profile-bio">Interest rate modeling, derivatives pricing, and systematic trading strategies.</p>
