--- a/research/index.html
+++ b/research/index.html
@@ -8,6 +8,21 @@ permalink: /research/
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Research | Ha Rim Jung</title>
+    
+    <!-- Open Graph / 카톡·메신저 미리보기 -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Research | Ha Rim Jung">
+    <meta property="og:description" content="Quantitative Finance & Stochastic Modeling Research">
+    <meta property="og:url" content="https://gkfla2020-bit.github.io/research/">
+    <meta property="og:image" content="https://gkfla2020-bit.github.io/assets/og-card.png">
+    <meta property="og:image:secure_url" content="https://gkfla2020-bit.github.io/assets/og-card.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:site_name" content="Ha Rim Jung">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="https://gkfla2020-bit.github.io/assets/og-card.png">
+    
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-83LKVW7412"></script>
     <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-83LKVW7412');</script>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500&family=Space+Mono:wght@400&family=Inter:wght@300;400&display=swap" rel="stylesheet">
@@ -103,7 +118,7 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
 
 <aside class="sidebar">
     <div class="sidebar-profile">
-        <img src="/assets/profile.png" alt="Ha Rim Jung" class="profile-photo">
+        <img src="/assets/profile.png" alt="Ha Rim Jung" class="profile-photo" data-nosnippet>
         <div class="profile-info">
             <div class="profile-name">Ha Rim Jung</div>
             <div class="profile-title">Quantitative Researcher</div>
