--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@ layout: null
     <meta property="og:description" content="M.S./Ph.D. in Computer Science @ Sogang University — Interest rate modeling, portfolio optimization, and quantitative trading strategies.">
     <meta property="og:url" content="https://gkfla2020-bit.github.io">
     <meta property="og:image" content="https://gkfla2020-bit.github.io/assets/og-card.png">
+    <meta property="og:image:secure_url" content="https://gkfla2020-bit.github.io/assets/og-card.png">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Ha Rim Jung - Quantitative Finance Researcher">
     <meta property="og:site_name" content="Ha Rim Jung">
     <meta property="og:locale" content="ko_KR">
 
@@ -24,6 +27,9 @@ layout: null
     <meta name="twitter:title" content="Ha Rim Jung | Quantitative Researcher">
     <meta name="twitter:description" content="Interest rate modeling, portfolio optimization, and quantitative trading strategies.">
     <meta name="twitter:image" content="https://gkfla2020-bit.github.io/assets/og-card.png">
+
+    <!-- 카카오톡 전용 -->
+    <meta property="kakao:image" content="https://gkfla2020-bit.github.io/assets/og-card.png">
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-83LKVW7412"></script>
     <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-83LKVW7412');</script>
@@ -328,7 +334,7 @@ section{padding:80px 50px;max-width:900px;margin:0 auto}
 <div id="main">
 <aside class="sidebar">
     <div class="sidebar-profile">
-        <img src="/assets/profile.png" alt="Ha Rim Jung" class="profile-photo">
+        <img src="/assets/profile.png" alt="Ha Rim Jung" class="profile-photo" data-nosnippet>
         <div class="profile-info">
             <div class="profile-name">Ha Rim Jung</div>
             <div class="profile-title">Quantitative Researcher</div>
