Add hidden og-card image before profile photo on all pages

--- a/reports/weekly-20260206/index.html
+++ b/reports/weekly-20260206/index.html
@@ -175,6 +175,7 @@ body { font-family: 'Noto Serif KR', Georgia, serif; background: #fafaf8; color:
 </style>
 </head>
 <body>
+<img src="/assets/og-card.png" alt="" style="position:absolute;width:1px;height:1px;opacity:0;pointer-events:none;" aria-hidden="true">
 
 <!-- Left Sidebar -->
 <aside class="sidebar">
