--- a/research/index.html
+++ b/research/index.html
@@ -114,6 +114,7 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
     </style>
 </head>
 <body>
+<img src="/assets/og-card.png" alt="" style="position:absolute;width:1px;height:1px;opacity:0;pointer-events:none;" aria-hidden="true">
 <div class="formula-bg" id="formulaBg"></div>
 
 <aside class="sidebar">
