--- a/research/bacbb/index.html
+++ b/research/bacbb/index.html
@@ -130,6 +130,7 @@ permalink: /research/bacbb/
     </style>
 </head>
 <body>
+<img src="/assets/og-card.png" alt="" style="position:absolute;width:1px;height:1px;opacity:0;pointer-events:none;" aria-hidden="true">
 
 <!-- Left Sidebar -->
 <aside class="sidebar">
