Add weekly report 20260207 with AI-generated analysis

--- a/reports/weekly-20260207/index.html
+++ b/reports/weekly-20260207/index.html
@@ -9,7 +9,7 @@
 <meta property="og:type" content="article">
 <meta property="og:title" content="Weekly Investment Report">
 <meta property="og:description" content="주간 매크로 시장 분석 및 투자 인사이트">
-<meta property="og:url" content="https://gkfla2020-bit.github.io/reports/weekly-20260206/">
+<meta property="og:url" content="https://gkfla2020-bit.github.io/reports/weekly-20260207/">
 <meta property="og:image" content="https://gkfla2020-bit.github.io/assets/og-card.png">
 <meta property="og:image:secure_url" content="https://gkfla2020-bit.github.io/assets/og-card.png">
 <meta property="og:image:type" content="image/png">
@@ -230,7 +230,8 @@ body { font-family: 'Noto Serif KR', Georgia, serif; background: #fafaf8; color:
         <div class="nav-section">
             <div class="nav-section-title">Reports</div>
             <ul class="nav-list">
-                <li><a href="/reports/weekly-20260206/" class="active">Weekly Report (02/06)</a></li>
+                <li><a href="/reports/weekly-20260207/" class="active">Weekly Report (02/07)</a></li>
+                <li><a href="/reports/weekly-20260206/">Weekly Report (02/06)</a></li>
             </ul>
         </div>
     </nav>
@@ -257,7 +258,7 @@ body { font-family: 'Noto Serif KR', Georgia, serif; background: #fafaf8; color:
             <div class="market-item"><span class="market-name">VIX</span><div><span class="market-value">21.8</span><span class="market-change up">+24.83%</span></div></div>
             <div class="market-item"><span class="market-name">MOVE</span><div><span class="market-value">119.7</span><span class="market-change">-</span></div></div>
         </div>
-        <div class="widget-update">Report Date: 2026-02-06</div>
+        <div class="widget-update">Report Date: 2026-02-07</div>
     </div>
 </aside>
 
@@ -266,7 +267,7 @@ body { font-family: 'Noto Serif KR', Georgia, serif; background: #fafaf8; color:
 
 <div class="masthead">
     <div class="masthead-title">Weekly Investment Report</div>
-    <div class="masthead-date">Week of February 02 - 06, 2026 | Seoul</div>
+    <div class="masthead-date">Week of February 03 - 07, 2026 | Seoul</div>
 </div>
 <div class="headline">Risk-Off: 방어적 포지션 전환 권고</div>
 <div class="subheadline">Score 25/100 · SELL</div>
