Update BACBB page with final version

--- a/research/bacbb/index.html
+++ b/research/bacbb/index.html
@@ -517,7 +517,7 @@ permalink: /research/bacbb/
         </p>
         
         <p>
-            본 연구는 이러한 공백을 메우고자 하며, 특히 암호화폐 시장의 고유한 특성을 반영한 베타 분해 방법론을 제시하고, 이를 기반으로 한 개선된 투자 전략을 개발하는 것을 목표로 한다.
+            본 연구는 이러한 공백을 메우고자 하며, 특히 암호화폐 시장의 고유한 특성을 반영한 베타 분해 방법론을 제시하고, 이를 기반으로 한 개선된 투자 전략을 개발하는 것을 목표로 한다. 본 논문에선 'CBAB' 팩터를 'BACBB'와 비교하기 위해서 편의상 'BACB'라 칭한다.
         </p>
 
 <!-- 3. 연구설계 및 방법론 -->
