--- a/research/bacbb/index.html
+++ b/research/bacbb/index.html
@@ -72,7 +72,7 @@ permalink: /research/bacbb/
         
         /* Main Content */
         .main-wrapper{margin-left:280px;margin-right:260px;min-height:100vh}
-        .container{max-width:1100px;margin:0 auto;padding:50px 40px 80px}
+        .container{max-width:none;margin:0;padding:50px 40px 80px}
         
         /* Paper Styles */
         .paper-content{font-family:'Times New Roman','Nanum Myeongjo',serif;line-height:1.8;background:#fff;padding:40px;border-radius:8px;box-shadow:0 2px 20px rgba(0,0,0,.05)}
