--- a/research/index.html
+++ b/research/index.html
@@ -143,6 +143,7 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
         <div class="nav-section">
             <div class="nav-section-title">Research</div>
             <ul class="nav-list">
+                <li><a href="/research/vol-integrated-kr/">Asset Co-movement</a></li>
                 <li><a href="/research/move-vasicek-kr/">MOVE-Vasicek Model</a></li>
                 <li><a href="/research/bacbb/">BACBB Strategy</a></li>
             </ul>
@@ -193,6 +194,19 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
         <p class="page-subtitle">Quantitative Finance & Stochastic Modeling</p>
         
         <div class="research-list">
+            <a href="/research/vol-integrated-kr/" class="research-item">
+                <div class="research-date">February 08, 2026</div>
+                <h2 class="research-title">자산 동조화와 거시적 전환점: 채권-원자재-비트코인 통합 분석</h2>
+                <p class="research-desc">바시첵 모델과 주말 보정 DCC-GARCH를 활용한 30년간(1995-2025) 채권-원자재-비트코인 관계의 구조적 변화 분석. 금융화 기간 반감기 1,813일에서 긴축 전환 후 169일로 급속 단축. BTC→SPX 전이효과 18.0% 확인.</p>
+                <div class="research-tags">
+                    <span class="tag">DCC-GARCH</span>
+                    <span class="tag">Vasicek</span>
+                    <span class="tag">Bitcoin</span>
+                    <span class="tag">Spillover</span>
+                    <span class="tag">Structural Break</span>
+                </div>
+            </a>
+            
             <a href="/research/move-vasicek-kr/" class="research-item">
                 <div class="research-date">February 05, 2026</div>
                 <h2 class="research-title">MOVE-Vasicek 모델 평가보고서</h2>
