--- a/index.html
+++ b/index.html
@@ -358,6 +358,7 @@ section{padding:80px 50px;max-width:900px;margin:0 auto}
         <div class="nav-section">
             <div class="nav-section-title">Research</div>
             <ul class="nav-list">
+                <li><a href="/research/vol-integrated-kr/">Asset Co-movement</a></li>
                 <li><a href="/research/move-vasicek-kr/">MOVE-Vasicek Model</a></li>
                 <li><a href="/research/bacbb/">BACBB Strategy</a></li>
             </ul>
