--- a/reports/weekly-20260207/index.html
+++ b/reports/weekly-20260207/index.html
@@ -222,6 +222,7 @@ body { font-family: 'Noto Serif KR', Georgia, serif; background: #fafaf8; color:
         <div class="nav-section">
             <div class="nav-section-title">Research</div>
             <ul class="nav-list">
+                <li><a href="/research/vol-integrated-kr/">Asset Co-movement</a></li>
                 <li><a href="/research/move-vasicek-kr/">MOVE-Vasicek Model</a></li>
                 <li><a href="/research/bacbb/">BACBB Strategy</a></li>
             </ul>
