Rename: When Correlations Break - 간지나는 제목으로 변경

--- a/research/index.html
+++ b/research/index.html
@@ -143,7 +143,7 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
         <div class="nav-section">
             <div class="nav-section-title">Research</div>
             <ul class="nav-list">
-                <li><a href="/research/vol-integrated-kr/">Asset Co-movement</a></li>
+                <li><a href="/research/vol-integrated-kr/">Regime Shift & Spillover</a></li>
                 <li><a href="/research/move-vasicek-kr/">MOVE-Vasicek Model</a></li>
                 <li><a href="/research/bacbb/">BACBB Strategy</a></li>
             </ul>
@@ -196,8 +196,8 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
         <div class="research-list">
             <a href="/research/vol-integrated-kr/" class="research-item">
                 <div class="research-date">February 08, 2026</div>
-                <h2 class="research-title">자산 동조화와 거시적 전환점: 채권-원자재-비트코인 통합 분석</h2>
-                <p class="research-desc">바시첵 모델과 주말 보정 DCC-GARCH를 활용한 30년간(1995-2025) 채권-원자재-비트코인 관계의 구조적 변화 분석. 금융화 기간 반감기 1,813일에서 긴축 전환 후 169일로 급속 단축. BTC→SPX 전이효과 18.0% 확인.</p>
+                <h2 class="research-title">When Correlations Break: Regime Shifts in Bond-Commodity-Bitcoin Nexus</h2>
+                <p class="research-desc">30년간(1995-2025) 통화정책 레짐 전환이 채권-원자재-비트코인 상관구조를 어떻게 붕괴시키는지 실증 분석. 양적완화 시대 금리 반감기 1,813일에서 긴축 전환 후 169일로 급속 단축. BTC→SPX 전이효과 18.0%로 새로운 시스템적 위험 경로 확인.</p>
                 <div class="research-tags">
                     <span class="tag">DCC-GARCH</span>
                     <span class="tag">Vasicek</span>
