--- a/research/move-vasicek-kr/index.html
+++ b/research/move-vasicek-kr/index.html
@@ -137,7 +137,7 @@ permalink: /research/move-vasicek-kr/
         <div class="nav-section">
             <div class="nav-section-title">Research</div>
             <ul class="nav-list">
-                <li><a href="/research/vol-integrated-kr/">Asset Co-movement</a></li>
+                <li><a href="/research/vol-integrated-kr/">Regime Shift & Spillover</a></li>
                 <li><a href="/research/move-vasicek-kr/" class="active">MOVE-Vasicek Model</a></li>
                 <li><a href="/research/bacbb/">BACBB Strategy</a></li>
             </ul>
