--- a/cv/index.html
+++ b/cv/index.html
@@ -133,7 +133,7 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
         <div class="nav-section">
             <div class="nav-section-title">Research</div>
             <ul class="nav-list">
-                <li><a href="/research/vol-integrated-kr/">Asset Co-movement</a></li>
+                <li><a href="/research/vol-integrated-kr/">Regime Shift & Spillover</a></li>
                 <li><a href="/research/move-vasicek-kr/">MOVE-Vasicek Model</a></li>
             </ul>
         </div>
