--- a/research/bacbb/index.html
+++ b/research/bacbb/index.html
@@ -160,7 +160,7 @@ permalink: /research/bacbb/
         <div class="nav-section">
             <div class="nav-section-title">Research</div>
             <ul class="nav-list">
-                <li><a href="/research/vol-integrated-kr/">Asset Co-movement</a></li>
+                <li><a href="/research/vol-integrated-kr/">Regime Shift & Spillover</a></li>
                 <li><a href="/research/move-vasicek-kr/">MOVE-Vasicek Model</a></li>
                 <li><a href="/research/bacbb/" class="active">BACBB Strategy</a></li>
             </ul>
