Replace finding-boxes with flowing prose paragraphs matching blog tone

--- a/research/vol-integrated-kr/index.html
+++ b/research/vol-integrated-kr/index.html
@@ -126,9 +126,6 @@ permalink: /research/vol-integrated-kr/
         .chart-container img{max-width:100%;border-radius:6px;box-shadow:0 2px 10px rgba(0,0,0,.1)}
         .chart-caption{font-size:12px;color:#666;margin-top:8px;font-style:italic}
         
-        .finding-box{background:linear-gradient(135deg,#0a192f,#1d3557);color:white;padding:25px 30px;border-radius:8px;margin:25px 0}
-        .finding-box h4{color:#e63946;font-family:'Inter',sans-serif;font-size:12px;letter-spacing:2px;text-transform:uppercase;margin-bottom:12px}
-        .finding-box p{text-indent:0;color:rgba(255,255,255,.9)}
         
         .references{font-size:12.5px;line-height:1.7}
         .references p{text-indent:-2em;padding-left:2em;margin-bottom:6px}
@@ -161,7 +158,6 @@ permalink: /research/vol-integrated-kr/
             thead th,tbody td{padding:6px 4px;white-space:nowrap}
             .chart-container img{border-radius:0}
             .abstract{padding:16px;margin:20px 0}
-            .finding-box{padding:18px 20px}
             .references p{font-size:11px}
         }
         @media print{.sidebar{display:none}.right-sidebar{display:none}.main-wrapper{margin:0}.paper-content{box-shadow:none;padding:15mm 20mm}}
@@ -628,10 +624,7 @@ permalink: /research/vol-integrated-kr/
 </tr>
 </tbody></table>
 <p>*<strong>p<0.01, </strong>p<0.05, *p<0.10</p>
-<div class="finding-box"><h4>핵심 발견</h4><p>핵심 변화:</p></div>
-<p class="no-indent" style="margin-left:2em;">• 구리-채권: 경기순응적에서 경기역행적으로 전환</p>
-<p class="no-indent" style="margin-left:2em;">• BTC-SPX: 독립성에서 높은 동조화로</p>
-<p class="no-indent" style="margin-left:2em;">• 금-채권: 음의 상관 지속적 강화</p>
+<p>이상의 기간별 상관 구조에서 세 가지 핵심적인 변화가 관찰된다. 첫째, 구리-채권 상관관계는 금융화 시기 +0.188에서 2022년 이후 -0.065로 전환되어, 구리가 경기순응적 자산에서 경기역행적 자산으로 성격이 변화했음을 보여준다. 이는 구조적 단절 검정에서도 p=0.000으로 통계적으로 유의하게 확인된다. 둘째, BTC-SPX 상관관계는 금융화 시기 0.162에서 2022년 이후 0.420으로 급등하여, 비트코인이 독립적 자산에서 주식시장과 높은 동조화를 보이는 자산으로 변모했다. 셋째, 금-채권 음의 상관은 -0.303에서 -0.341로 지속적으로 강화되어, 금의 안전자산 기능이 긴축 환경에서 오히려 공고해졌음을 시사한다.</p>
 <div class="section-divider">• • •</div>
 <h2>5. 실증 분석 결과</h2>
 <h3>5.1 바시첵 모델: 통화정책 레짐의 정량적 분석</h3>
@@ -1116,10 +1109,7 @@ permalink: /research/vol-integrated-kr/
 <td>금리→투자→수요</td>
 </tr>
 </tbody></table>
-<div class="finding-box"><h4>핵심 발견</h4><p><strong>핵심 발견</strong>:</p></div>
-<p class="no-indent" style="margin-left:2em;">• Bond→Gold의 즉각적(lag 1) 강한 인과성은 실질금리가 금 가격의 핵심 동인임을 확인</p>
-<p class="no-indent" style="margin-left:2em;">• BTC→WTI의 5일 시차 인과성은 비트코인 가격 상승→마이닝 증가→전력 수요→에너지 가격의 연쇄효과 시사</p>
-<p class="no-indent" style="margin-left:2em;">• VIX의 광범위한 영향력은 시장 불확실성이 모든 자산군에 영향을 미침을 보여줌</p>
+<p>그랜저 인과성 분석에서 세 가지 주목할 만한 결과가 도출된다. 우선, Bond→Gold의 즉각적(lag 1) 인과성이 F=17.35(p=0.000)로 가장 강하게 나타났는데, 이는 실질금리 변동이 금 가격의 핵심 동인임을 실증적으로 확인시켜준다. 다음으로, BTC→WTI의 5일 시차 인과성(F=5.23, p=0.000)은 비트코인 가격 상승이 마이닝 활동 증가, 전력 수요 확대, 에너지 가격 상승으로 이어지는 연쇄적 전달 경로를 시사한다. 마지막으로, VIX는 금(F=5.73), WTI(F=3.98), BTC(F=2.25), SPX(F=8.40) 등 모든 자산군에 대해 유의한 인과성을 보여, 시장 불확실성이 자산 간 공동 움직임의 공통 요인으로 작용하고 있음을 확인할 수 있다.</p>
 <h4 style="font-size:1.05em;color:#2c3e50;margin:20px 0 10px;">5.5.2 시기별 인과성 변화</h4>
 <table>
 <caption>표 10: BTC 관련 인과성의 시기별 변화</caption>
@@ -1507,10 +1497,7 @@ permalink: /research/vol-integrated-kr/
 
 <p>SVB 위기에서 비트코인은 COVID-19 때와는 정반대의 행동을 보였다. BTC-SPX 상관관계가 0.096으로 급락한 반면, BTC-Gold 상관관계는 0.370으로 급등했다. 이는 비트코인이 은행 시스템 리스크에 대한 대안적 가치 저장 수단으로 인식되었음을 시사한다.</p>
 
-<div class="finding-box">
-    <h4>위기별 비트코인의 적응적 행동</h4>
-    <p>비트코인은 위기의 성격에 따라 적응적으로 행동한다. 유동성 위기(COVID-19)에서는 위험자산처럼 행동하여 SPX와의 상관이 0.571로 급등했으나, 은행 시스템 위기(SVB)에서는 탈중앙화 자산으로서 금과의 상관이 0.370으로 급등했다. 이러한 '카멜레온 효과'는 비트코인을 단순히 위험자산 또는 안전자산으로 분류하는 이분법적 접근의 한계를 보여준다.</p>
-</div>
+<p>비트코인은 위기의 성격에 따라 적응적으로 행동하는 독특한 패턴을 보인다. 유동성 위기였던 COVID-19 시기에는 전형적인 위험자산처럼 행동하여 BTC-SPX 상관관계가 0.571로 급등한 반면, BTC-Gold 상관은 0.258에 머물렀다. 반면 은행 시스템 위기였던 SVB 사태에서는 정반대의 양상이 나타났다. BTC-SPX 상관이 0.096으로 급락하고, BTC-Gold 상관이 0.370으로 급등하여 비트코인이 탈중앙화 가치 저장 수단으로서의 면모를 드러냈다. 이러한 '카멜레온 효과'는 비트코인을 위험자산 또는 안전자산으로 이분법적으로 분류하는 기존 접근의 한계를 명확히 보여주며, 위기의 원천에 따라 비트코인의 역할이 동태적으로 전환된다는 점에서 포트폴리오 구성에 중요한 함의를 갖는다.</p>
 
 <p>금-채권 상관관계 역시 SVB 위기 시 -0.664로 극단적 음의 값을 기록했다. 이는 전통적 flight-to-quality 메커니즘이 은행 위기에서 가장 강력하게 작동함을 확인시켜준다. 반면 COVID-19 시에는 -0.031로 거의 소멸되었는데, 이는 유동성 위기의 특수성을 반영한다.</p>
 
